--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
     <title>Rock, Paper, Scissors</title>
 </head>
 <body>
-    <h1>Open the console to play Rock, Paper, Scissors</h1>
+    <div>
+        <span>:</span>
+    </div>
+    <div>
+        <button class="rock">Rock</button>
+        <button class="paper">Paper</button>
+        <button class="scissors">Scissors</button>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
